# Holo-in-telegram

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
arch/: answer.go  aur.go  aur_test.go  handle.go  official.go  official_test.go  query.go  query_test.go
google/: answer.go  googleResult.go  handle.go  search.go  search_test.go
src/: arch.rs  command.rs  google.rs  handle.rs  lib.rs  main.rs
telegram/: handle.go  mux.go
