[package]
name = "holo_in_telegram"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
tokio = { version = "0.2", features = ["rt-core", "rt-util", "macros"] }
reqwest = { version = "0.10", features = ["json", "rustls-tls", "gzip"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
difflib = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
